# haxxserver

./: Cargo.toml  README.md
certs/: cert.pem  key.pem
public/: index.html
src/: config.rs  https_server.rs  main.rs  middleware.rs  router.rs  server.rs
