[package]
name = "haxxserver"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.23"
rustls = "0.20"
rustls-pemfile = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
mime_guess = "2.0"
clap = { version = "3.2", features = ["derive"] }
rcgen = "0.9"
